include/ishtar.h

struct ishtar_class_t;
struct ishtar_callframe_exception_t;
struct call_frame_t;
struct ishtar_module_t;
struct ishtar_task_data_t;
struct ishtar_thread_ctx_t;
typedef enum ishtar_thread_status_e {
    THREAD_STATUS_CREATED = 0,
    THREAD_STATUS_RUNNING = 1,
    THREAD_STATUS_PAUSED = 2,
    THREAD_STATUS_EXITED = 3,
} ishtar_thread_status_e;
typedef enum ishtar_job_status_e {
    JOB_STATUS_CREATED = 0,
    JOB_STATUS_RUNNING = 1,
    JOB_STATUS_PAUSED = 2,
    JOB_STATUS_CANCELED = 3,
    JOB_STATUS_EXITED = 4,
} ishtar_job_status_e;
typedef enum ishtar_opcode_e {
    OPCODE_NOP = 0,
    OPCODE_ADD = 1,
    OPCODE_SUB = 2,
    OPCODE_DIV = 3,
    OPCODE_MUL = 4,
    OPCODE_MOD = 5,
    OPCODE_LDARG_0 = 6,
    OPCODE_LDARG_1 = 7,
    OPCODE_LDARG_2 = 8,
    OPCODE_LDARG_3 = 9,
    OPCODE_LDARG_4 = 10,
    OPCODE_LDARG_5 = 11,
    OPCODE_LDARG_S = 12,
    OPCODE_STARG_0 = 13,
    OPCODE_STARG_1 = 14,
    OPCODE_STARG_2 = 15,
    OPCODE_STARG_3 = 16,
    OPCODE_STARG_4 = 17,
    OPCODE_STARG_5 = 18,
    OPCODE_STARG_S = 19,
    OPCODE_LDC_F4 = 20,
    OPCODE_LDC_F2 = 21,
    OPCODE_LDC_STR = 22,
    OPCODE_LDC_I4_0 = 23,
    OPCODE_LDC_I4_1 = 24,
    OPCODE_LDC_I4_2 = 25,
    OPCODE_LDC_I4_3 = 26,
    OPCODE_LDC_I4_4 = 27,
    OPCODE_LDC_I4_5 = 28,
    OPCODE_LDC_I4_S = 29,
    OPCODE_LDC_I2_0 = 30,
    OPCODE_LDC_I2_1 = 31,
    OPCODE_LDC_I2_2 = 32,
    OPCODE_LDC_I2_3 = 33,
    OPCODE_LDC_I2_4 = 34,
    OPCODE_LDC_I2_5 = 35,
    OPCODE_LDC_I2_S = 36,
    OPCODE_LDC_I8_0 = 37,
    OPCODE_LDC_I8_1 = 38,
    OPCODE_LDC_I8_2 = 39,
    OPCODE_LDC_I8_3 = 40,
    OPCODE_LDC_I8_4 = 41,
    OPCODE_LDC_I8_5 = 42,
    OPCODE_LDC_I8_S = 43,
    OPCODE_LDC_F8 = 44,
    OPCODE_LDC_F16 = 45,
    OPCODE_RESERVED_0 = 46,
    OPCODE_RESERVED_1 = 47,
    OPCODE_RESERVED_2 = 48,
    OPCODE_RET = 49,
    OPCODE_CALL = 50,
    OPCODE_LDNULL = 51,
    OPCODE_LDF = 52,
    OPCODE_LDSF = 53,
    OPCODE_STF = 54,
    OPCODE_STSF = 55,
    OPCODE_LDLOC_0 = 56,
    OPCODE_LDLOC_1 = 57,
    OPCODE_LDLOC_2 = 58,
    OPCODE_LDLOC_3 = 59,
    OPCODE_LDLOC_4 = 60,
    OPCODE_LDLOC_5 = 61,
    OPCODE_LDLOC_S = 62,
    OPCODE_STLOC_0 = 63,
    OPCODE_STLOC_1 = 64,
    OPCODE_STLOC_2 = 65,
    OPCODE_STLOC_3 = 66,
    OPCODE_STLOC_4 = 67,
    OPCODE_STLOC_5 = 68,
    OPCODE_STLOC_S = 69,
    OPCODE_LOC_INIT = 70,
    OPCODE_LOC_INIT_X = 71,
    OPCODE_DUP = 72,
    OPCODE_XOR = 73,
    OPCODE_OR = 74,
    OPCODE_AND = 75,
    OPCODE_SHR = 76,
    OPCODE_SHL = 77,
    OPCODE_CONV_R4 = 78,
    OPCODE_CONV_R8 = 79,
    OPCODE_CONV_I4 = 80,
    OPCODE_THROW = 81,
    OPCODE_NEWOBJ = 82,
    OPCODE_NEWARR = 83,
    OPCODE_LDLEN = 84,
    OPCODE_LDELEM_S = 85,
    OPCODE_STELEM_S = 86,
    OPCODE_LD_TYPE = 87,
    OPCODE_EQL_LQ = 88,
    OPCODE_EQL_L = 89,
    OPCODE_EQL_HQ = 90,
    OPCODE_EQL_H = 91,
    OPCODE_EQL_NQ = 92,
    OPCODE_EQL_NN = 93,
    OPCODE_EQL_F = 94,
    OPCODE_EQL_T = 95,
    OPCODE_JMP = 96,
    OPCODE_JMP_LQ = 97,
    OPCODE_JMP_L = 98,
    OPCODE_JMP_HQ = 99,
    OPCODE_JMP_H = 100,
    OPCODE_JMP_NQ = 101,
    OPCODE_JMP_NN = 102,
    OPCODE_JMP_F = 103,
    OPCODE_JMP_T = 104,
    OPCODE_POP = 105,
    OPCODE_ALLOC_BLOCK = 106,
    OPCODE_DELETE = 107,
    OPCODE_SEH_LEAVE_S = 108,
    OPCODE_SEH_LEAVE = 109,
    OPCODE_SEH_FINALLY = 110,
    OPCODE_SEH_FILTER = 111,
    OPCODE_SEH_ENTER = 112,
    OPCODE_CAST = 113,
    OPCODE_CALL_SP = 114,
    OPCODE_LDFN = 115,
    OPCODE_LD_TYPE_G = 116,
} ishtar_opcode_e;
typedef struct ishtar_version_t {
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    uint32_t build;
} ishtar_version_t;
typedef struct ishtar_frames_t {
    struct call_frame_t* module_loader_frame;
    struct call_frame_t* entry_point;
    struct call_frame_t* jit;
    struct call_frame_t* garbage_collector;
    struct call_frame_t* native_loader;
} ishtar_frames_t;
typedef struct ishtar_string_t {
    uint64_t id;
    uint64_t i_d;
} ishtar_string_t;
typedef struct ishtar_method_t {
    void* _self;
    struct ishtar_method_header_t* header;
    struct ishtar_method_call_info_t p_i_info;
    uint64_t vtable_offset;
    struct ishtar_string_t* _name;
    struct ishtar_string_t* _raw_name;
    bool _ctor_called;
    method_flags_t flags;
    struct ishtar_class_t* owner;
    void* aspects;
    void* signature;
} ishtar_method_t;
typedef struct ishtar_callframe_exception_t {
    void* last_ip;
    struct ishtar_object_t* value;
    struct ishtar_string_t* stack_trace;
} ishtar_callframe_exception_t;
typedef struct call_frame_t {
    struct call_frame_t* self;
    struct call_frame_t* parent;
    struct ishtar_method_t* method;
    int32_t level;
    void* return_value;
    void* args;
    ishtar_opcode_e last_ip;
    struct ishtar_callframe_exception_t exception;
} call_frame_t;
typedef struct ishtar_types_t {
    struct ishtar_class_t* object_class;
    struct ishtar_class_t* value_type_class;
    struct ishtar_class_t* void_class;
    struct ishtar_class_t* string_class;
    struct ishtar_class_t* byte_class;
    struct ishtar_class_t* s_byte_class;
    struct ishtar_class_t* int32_class;
    struct ishtar_class_t* int16_class;
    struct ishtar_class_t* int64_class;
    struct ishtar_class_t* u_int32_class;
    struct ishtar_class_t* u_int16_class;
    struct ishtar_class_t* u_int64_class;
    struct ishtar_class_t* half_class;
    struct ishtar_class_t* float_class;
    struct ishtar_class_t* double_class;
    struct ishtar_class_t* decimal_class;
    struct ishtar_class_t* bool_class;
    struct ishtar_class_t* char_class;
    struct ishtar_class_t* array_class;
    struct ishtar_class_t* exception_class;
    struct ishtar_class_t* raw_class;
    struct ishtar_class_t* aspect_class;
    struct ishtar_class_t* function_class;
    struct ishtar_class_t* range_class;
    void* all;
    void* mapping;
} ishtar_types_t;
typedef struct ishtar_class_t {
    void* _self_reference;
    void* methods;
    void* fields;
    void* aspects;
    struct ishtar_module_t* owner;
    struct ishtar_class_t* parent;
    void* full_name;
    bool _is_disposed;
    int32_t type_code;
    class_flag_t flags;
    struct ishtar_rtoken_t runtime_token;
    uint32_t i_d;
    uint16_t magic1;
    uint16_t magic2;
    uint64_t computed_size;
    bool is_inited;
    void* vtable;
    uint64_t vtable_size;
} ishtar_class_t;
typedef struct ishtar_trace_t {
    bool use_console;
    bool use_file;
} ishtar_trace_t;
typedef struct LLVMContext {
    void* _ctx;
    void* _ffi_module;
    void* _execution_engine;
} LLVMContext;
typedef struct ishtar_threading_t {
    void* threads;
} ishtar_threading_t;
typedef struct vm_t {
    struct ishtar_string_t* name;
    struct ishtar_frames_t* frames;
    ishtar_trace_t trace;
    struct LLVMContext jitter;
    struct ishtar_types_t* types;
    struct ishtar_threading_t threading;
    struct ishtar_scheduler_t* task_scheduler;
    struct ishtar_module_t* internal_module;
    struct ishtar_class_t* internal_class;
} vm_t;
typedef struct vm_applet {
    void* _module;
} vm_applet;
typedef struct comparer_applet {
} comparer_applet;
typedef struct ishtar_thread_raw_t {
    struct ishtar_module_t* main_module;
    void* thread_id;
    void* call_frame;
    ishtar_string_t* name;
} ishtar_thread_raw_t;
typedef struct ishtar_task_t {
    uint64_t index;
    struct ishtar_task_data_t* data;
    call_frame_t* frame;
} ishtar_task_t;
typedef struct ishtar_thread_t {
    struct ishtar_thread_ctx_t* ctx;
    void* thread_id;
    struct call_frame_t* call_frame;
} ishtar_thread_t;
typedef struct ishtar_thread_ctx_t {
    ishtar_thread_status_e status;
    void* thread_id;
    void* locker;
} ishtar_thread_ctx_t;
typedef struct ishtar_job_ctx_t {
    ishtar_job_status_e status;
    void* job_id;
    void* locker;
} ishtar_job_ctx_t;
typedef struct ishtar_scheduler_t {
    uint64_t task_index;
    void* async_header;
    size_t loop;
    void* _queue;
} ishtar_scheduler_t;
typedef struct ishtar_module_t {
    void* vault;
    uint32_t i_d;
    struct ishtar_version_t version;
    void* alias_table;
    void* class_table;
    void* deps_table;
    void* aspects_table;
    void* types_table;
    void* generics_table;
    void* fields_table;
    void* string_table;
    void* const_storage;
    struct ishtar_string_t* _name;
    struct ishtar_module_t* _self;
    struct ishtar_class_t* bootstrapper;
} ishtar_module_t;
typedef struct ishtar_task_data_t {
    void* semaphore;
} ishtar_task_data_t;