include/ishtar.rs

#[test]
fn bindgen_test_layout_vm_t() {
    const UNINIT: ::std::mem::MaybeUninit<vm_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<vm_t>(),
        88usize,
        concat!("Size of: ", stringify!(vm_t))
    );
    assert_eq!(
        ::std::mem::align_of::<vm_t>(),
        8usize,
        concat!("Alignment of ", stringify!(vm_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).frames) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(frames)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).trace) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(trace)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jitter) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(jitter)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).types) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(types)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).threading) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(threading)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).task_scheduler) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(task_scheduler)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).internal_module) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(internal_module)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).internal_class) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_t),
            "::",
            stringify!(internal_class)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vm_applet {
    pub _module: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_vm_applet() {
    const UNINIT: ::std::mem::MaybeUninit<vm_applet> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<vm_applet>(),
        8usize,
        concat!("Size of: ", stringify!(vm_applet))
    );
    assert_eq!(
        ::std::mem::align_of::<vm_applet>(),
        8usize,
        concat!("Alignment of ", stringify!(vm_applet))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._module) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vm_applet),
            "::",
            stringify!(_module)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct comparer_applet {
    pub _address: u8,
}
#[test]
fn bindgen_test_layout_comparer_applet() {
    assert_eq!(
        ::std::mem::size_of::<comparer_applet>(),
        4usize,
        concat!("Size of: ", stringify!(comparer_applet))
    );
    assert_eq!(
        ::std::mem::align_of::<comparer_applet>(),
        1usize,
        concat!("Alignment of ", stringify!(comparer_applet))
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_thread_raw_t {
    pub main_module: *mut ishtar_module_t,
    pub thread_id: *mut ::std::os::raw::c_void,
    pub call_frame: *mut ::std::os::raw::c_void,
    pub name: *mut ishtar_string_t,
}
#[test]
fn bindgen_test_layout_ishtar_thread_raw_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_thread_raw_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_thread_raw_t>(),
        32usize,
        concat!("Size of: ", stringify!(ishtar_thread_raw_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_thread_raw_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_thread_raw_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).main_module) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_raw_t),
            "::",
            stringify!(main_module)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).thread_id) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_raw_t),
            "::",
            stringify!(thread_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).call_frame) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_raw_t),
            "::",
            stringify!(call_frame)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_raw_t),
            "::",
            stringify!(name)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_task_t {
    pub index: u64,
    pub data: *mut ishtar_task_data_t,
    pub frame: *mut call_frame_t,
}
#[test]
fn bindgen_test_layout_ishtar_task_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_task_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_task_t>(),
        24usize,
        concat!("Size of: ", stringify!(ishtar_task_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_task_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_task_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).index) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_task_t),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_task_t),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).frame) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_task_t),
            "::",
            stringify!(frame)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_thread_t {
    pub ctx: *mut ishtar_thread_ctx_t,
    pub thread_id: *mut ::std::os::raw::c_void,
    pub call_frame: *mut call_frame_t,
}
#[test]
fn bindgen_test_layout_ishtar_thread_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_thread_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_thread_t>(),
        24usize,
        concat!("Size of: ", stringify!(ishtar_thread_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_thread_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_thread_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ctx) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_t),
            "::",
            stringify!(ctx)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).thread_id) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_t),
            "::",
            stringify!(thread_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).call_frame) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_t),
            "::",
            stringify!(call_frame)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_thread_ctx_t {
    pub status: ishtar_thread_status_e,
    pub thread_id: *mut ::std::os::raw::c_void,
    pub locker: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_ishtar_thread_ctx_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_thread_ctx_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_thread_ctx_t>(),
        24usize,
        concat!("Size of: ", stringify!(ishtar_thread_ctx_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_thread_ctx_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_thread_ctx_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).status) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_ctx_t),
            "::",
            stringify!(status)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).thread_id) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_ctx_t),
            "::",
            stringify!(thread_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).locker) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_thread_ctx_t),
            "::",
            stringify!(locker)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_job_ctx_t {
    pub status: ishtar_job_status_e,
    pub job_id: *mut ::std::os::raw::c_void,
    pub locker: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_ishtar_job_ctx_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_job_ctx_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_job_ctx_t>(),
        24usize,
        concat!("Size of: ", stringify!(ishtar_job_ctx_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_job_ctx_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_job_ctx_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).status) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_job_ctx_t),
            "::",
            stringify!(status)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).job_id) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_job_ctx_t),
            "::",
            stringify!(job_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).locker) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_job_ctx_t),
            "::",
            stringify!(locker)
        )
    );
}
